# pybind11_generics

./: .bashrc_python  .doc8.ini  .flake8  .gitignore  .gitmodules  .mypy.ini  .pandoc_rst.yaml  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  README.md  README.rst  build.sh  build_test.sh  destructor_test.py  format_rst.sh  print_docs.py  print_help.sh  pyproject.toml  run_test.sh  setup.cfg  setup.py
.config_patch/: pyproject.toml.patch
include/pybind11_generics/: any.h  cast.h  cast_input_iterator.h  custom.h  dict.h  iterable.h  iterator.h  list.h  optional.h  sequence.h  tuple.h  type_name.h  union.h
src/: CMakeLists.txt  main.cpp  move_cast.cpp  move_cast.h  test_any.cpp  test_any.h  test_dict.cpp  test_dict.h  test_iter.cpp  test_iter.h  test_iterable.cpp  test_iterable.h  test_list.cpp  test_list.h  test_optional.cpp  test_optional.h  test_tuple.cpp  test_tuple.h  test_union.cpp  test_union.h
src/pybind11_generics/: __init__.py
src/pybind11_generics/stubgen/: __init__.py  __main__.py  parsedoc.py  stubgenc.py
src/pybind11_stubgen/: __main__.py  stubgenc.py
src/pybind11_utils/: __init__.py
src/pybind11_utils/stubgen/: __init__.py  __main__.py  parsedoc.py  stubgenc.py
src/pyg_test/: move_cast.h  test_any.cpp  test_any.h  test_dict.cpp  test_iterable.cpp  test_sequence.cpp  test_sequence.h  test_tuple.h  test_union.cpp  test_union.h
stubgen/: __init__.py  __main__.py  parsedoc.py  stubgenc.py  stubutil.py
tests/: __init__.py  test_any.py  test_dict.py  test_iter.py  test_iterable.py  test_list.cpp  test_list.py  test_optional.py  test_sequence.py  test_tuple.py  test_union.py  util.py
