[build-system]
requires = [ "setuptools>=51", "wheel>=0.36",]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.mypy_cache|__pycache__|\.venv|_build'

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".mypy_cache", "__pycache__", ".venv", "_build"]
