[metadata]
name = pybind11_generics
version = attr: pybind11_generics.__version__
author = Eric Chang
author_email = info@bcanalog.com
license = Apache-2.0
license_file = LICENSE
description = Python utilties for building C extensions created with pybind11_generics.
long_description = file: README.rst


[options]
package_dir = 
  = src
packages = find:
install_requires =
  packaging>=20
  setuptools>=50
  isort>=5.7
  black>=20.0.dev0
  click>=7.1
python_requires = >=3.7

[options.packages.find]
where=src

[options.package_data]
pybind11_utils = 
  py.typed
