[metadata]
name = pybind11_generics
author = Eric Chang
author_email = info@bcanalog.com
license = Apache-2.0
license_file = LICENSE
description = Python utilties for building C extensions created with pybind11_generics.
long_description = file: README.rst

[options]
package_dir =
  = src
packages = find:
install_requires =
  packaging>=20
  setuptools>=50
  isort>=5.7
  black>=20.8b1
  click>=7.1
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where=src
